# schemer

./: CMakeLists.txt
cmake/: SchemerConfig.cmake.in  SchemerConfigVersion.cmake.in
include/schemer/: Element.h  Enumeration.h  Fundamental.h  List.h  Map.h  Parse.h  Registry.h  Scalar.h  Schemer.h  Variant.h  Wrapper.h  YamlTranscode.h
include/schemer/detail/: Element.h  Enumeration.h  Fundamental.h  List.h  Map.h  Type.h  Variant.h  Wrapper.h
src/: Parse.cpp
tests/: list.cpp  map.cpp
